Enhance portfolio with SEO and personal details
Updated the title and added SEO meta tags, social media links, and personal information to enhance the portfolio's visibility and content.

--- a/index.html
+++ b/index.html
@@ -1,34 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+<meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kirti's AI Portfolio</title>
+  
+  <title>Kirti Kaushal | AI & ML Portfolio | PGP-AIML | Full Stack Developer</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Kirti Kaushal – AI & ML enthusiast, PGP-AIML graduate, and Full Stack Developer. Exploring AI agents, web development, and helping others grow through knowledge sharing.">
+  <meta name="keywords" content="AI, Machine Learning, PGP-AIML, Full Stack Developer, Web Development, Technical Lead, Mentorship, Kirti Kaushal, AI Projects, Medium Articles, CFA, Azure, Agile, Learning">
+  <meta name="author" content="Kirti Kaushal">
+
+  <!-- Open Graph / Social Media -->
+  <meta property="og:title" content="Kirti Kaushal | AI & ML Portfolio">
+  <meta property="og:description" content="Exploring AI and ML, building intelligent solutions, sharing knowledge, and helping others grow.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://kirti.github.io/">
+  <meta property="og:image" content="https://avatars.githubusercontent.com/u/119587?s=400&u=dc7ab57f514e2fbb6afa2cd9409fa76d24c3a8d2&v=4">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Kirti Kaushal | AI & ML Portfolio">
+  <meta name="twitter:description" content="Exploring AI and ML, building intelligent solutions, sharing knowledge, and helping others grow.">
+  <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/119587?s=400&u=dc7ab57f514e2fbb6afa2cd9409fa76d24c3a8d2&v=4">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome for Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://kirti.github.io/">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Kirti's AI & ML Portfolio</h1>
-    <p>Exploring Artificial Intelligence and Machine Learning projects.</p>
-  </header>
 
-  <section id="about">
+<header>
+  <h1>Kirti Kaushal</h1>
+  <div class="social-icons">
+    <a href="https://github.com/kirti" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://linkedin.com/in/kirti" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://medium.com/@kirtikau" target="_blank"><i class="fab fa-medium"></i></a>
+  </div>
+</header>
+
+<!-- TOP SPLIT SECTION -->
+<section class="top-section">
+
+  <!-- LEFT SIDE: Certifications / Intro -->
+  <div class="left-side">
+    <div class="hero-badge"> Full Stack Developer • AI Engineer • Machine Learning Explorer</div>
+    <div class="hero-subtitle">PGP-AIML | Full Stack Developer | CFA Investment Foundations®| Microsoft Certified: Azure Fundamentals | Leading SAFe® | Certified SAFe® 6 | (CSM®) | CS50 certified |Green Belt React Js Secure Code Warrior</div>
+   <h2>
+      Building Intelligent Solutions<br>
+      Through AI & Continuous Learning
+    </h2>
+    <p>
+      I am starting my journey in building AI agents and exploring exciting projects to grow my skills after completing PGP-AIML. </p>
+      <p>Passionate about AI and Machine Learning, I aim to apply what I learn to create meaningful solutions</p>.
+      <p>My goal is not just personal growth, but also sharing knowledge, helping others, and inspiring learning. Excited to explore, learn, and create together with the community every step of the way!</p> 
+  </div>
+
+  <!-- RIGHT SIDE: About Me -->
+  <div class="right-side about-section">
     <h2>About Me</h2>
-    <p>Hello! I am Kirti, exploring AI and building tools, extensions, and experiments. This portfolio will showcase my projects and AI work.</p>
-  </section>
+    <p>With over <strong>14 years of experience</strong> in software development, I’ve held roles as a Technical Artictech , Technical Lead, Software Developer, and Team Lead. I focus on creating web applications that delight users and drive business goals, while exploring AI and ML to build smarter solutions.</p>
+    
+    <p>I enjoy mentoring teams, providing technical guidance, and collaborating with stakeholders. I’m always happy to learn, grow, and create together!</p>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <p>Project details and my AI agent extension will be added here soon.</p>
-  </section>
+    <p class="quote">“Kind is Cool | Share your knowledge”</p>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Check out my GitHub profile: <a href="https://github.com/kirti" target="_blank">github.com/kirti</a></p>
-  </section>
+    <p>My personal spiritual path includes a journey to <strong>Shree Radhe Radhe Krishna, Maha Dev</strong>, and practicing <strong>Art of Living</strong>. </p>
+    <p>I coach people free of cost and invite anyone interested to contact me at <a href="mailto:kirtikau30@gmail.com" style="color:#00b0ff;">Email here</a>. Every year, I try to help people learn and grow together.</p>
 
-  <footer>
-    <p>© 2026 Kirti | Portfolio powered by GitHub Pages</p>
-  </footer>
+    <div style="margin-top: 30px; padding-top: 30px; border-top: 1px solid #333;">
+        <p style="margin-bottom: 20px; color: #ddd;">
+            <strong style="color: #00b0ff;">Adding my Journey to AI and ML, and my projects on GitHub:</strong>
+        </p>
+        <div style="display: flex; gap: 15px; flex-wrap: wrap;">
+            <a href="https://github.com/kirti3" target="_blank" style="
+                display: inline-flex;
+                align-items: center;
+                gap: 8px;
+                padding: 12px 20px;
+                background: linear-gradient(135deg, #00b0ff, #0088cc);
+                color: white;
+                text-decoration: none;
+                border-radius: 6px;
+                font-weight: 600;
+                transition: 0.3s ease;
+                box-shadow: 0 4px 12px rgba(0, 176, 255, 0.3);
+            " 
+            onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 16px rgba(0, 176, 255, 0.5)';"
+            onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(0, 176, 255, 0.3)';">
+                <i class="fab fa-github"></i> GitHub Profile
+            </a>
+            <a href="https://marketplace.visualstudio.com/publishers/kirti3" target="_blank" style="
+                display: inline-flex;
+                align-items: center;
+                gap: 8px;
+                padding: 12px 20px;
+                background: linear-gradient(135deg, #007acc, #005a9e);
+                color: white;
+                text-decoration: none;
+                border-radius: 6px;
+                font-weight: 600;
+                transition: 0.3s ease;
+                box-shadow: 0 4px 12px rgba(0, 122, 204, 0.3);
+            "
+            onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 16px rgba(0, 122, 204, 0.5)';"
+            onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(0, 122, 204, 0.3)';">
+                <i class="fab fa-windows"></i> VS Marketplace Extension
+            </a>
+        </div>
+    </div>
+   
+
+  </div>
+
+</section>
+
+<section id="medium2">
+  <h2>Documenting my Medium journey to guide and inspire learners while exploring AI and ML.
+ </h2>
+  <div class="articles" id="articles-learning">
+    
+  </div>
+</section>
+
+<!-- MEDIUM ARTICLES SECTION -->
+<section id="medium">
+  <h2>Interview Articles</h2>
+  <div class="articles" id="articles">
+    <div class="article-card">
+      <h3><a href="https://kirtikau.medium.com/list/100-days-of-javascript-interview-prep-a-beginners-journey-6d895127c989" target="_blank">100 Days of JavaScript: Interview Prep - A Beginner's Journey</a></h3>
+      <p>Published on: 20 Mar 2026</p>
+    </div>
+    <div class="article-card">
+      <h3><a href="https://kirtikau.medium.com/list/explore-openai-chatgpt-nextjs-the-react-framework-953da44e71ce" target="_blank">Explore OpenAI ChatGPT and Next.js: The React Framework</a></h3>
+      <p>Published on: 18 Mar 2026</p>
+    </div>
+  </div>
+</section>
+
+<footer>
+  © 2026 Kirti | Portfolio powered by GitHub Pages
+</footer>
+
+<script>
+  // Fetch Medium Articles via RSS2JSON
+  fetch("https://api.rss2json.com/v1/api.json?rss_url=https://medium.com/feed/@kirtikau")
+  .then(response => response.json())
+  .then(data => {
+    const container = document.getElementById("articles-learning");
+    container.innerHTML = "";
+    data.items.slice(0,5).forEach(post => {
+      const article = document.createElement("div");
+      article.classList.add("article-card");
+      article.innerHTML = `
+        <h3>${post.title}</h3>
+        <p>${new Date(post.pubDate).toLocaleDateString()}</p>
+        <a href="${post.link}" target="_blank">Read on Medium</a>
+      `;
+      container.appendChild(article);
+    });
+  })
+  .catch(err => {
+    document.getElementById("articles").innerHTML = "<p>Failed to load articles.</p>";
+    console.log(err);
+  });
+</script>
 </body>
 </html>
