Fix GitHub link in index.html
Updated the GitHub link to point to the correct profile.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <strong style="color: #00b0ff;">Adding my Journey to AI and ML, and my projects on GitHub:</strong>
         </p>
         <div style="display: flex; gap: 15px; flex-wrap: wrap;">
-            <a href="https://github.com/kirti3" target="_blank" style="
+            <a href="https://github.com/kirti" target="_blank" style="
                 display: inline-flex;
                 align-items: center;
                 gap: 8px;
