Update LinkedIn link in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <h1>Kirti Kaushal</h1>
   <div class="social-icons">
     <a href="https://github.com/kirti" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://linkedin.com/in/kirti" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://www.linkedin.com/in/kirti3/" target="_blank"><i class="fab fa-linkedin"></i></a>
     <a href="https://medium.com/@kirtikau" target="_blank"><i class="fab fa-medium"></i></a>
   </div>
 </header>
