Fix formatting issues in index.html paragraphs

--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
     </h2>
     <p>
       I am starting my journey in building AI agents and exploring exciting projects to grow my skills after completing PGP-AIML. </p>
-      <p>Passionate about AI and Machine Learning, I aim to apply what I learn to create meaningful solutions</p>.
-      <p>My goal is not just personal growth, but also sharing knowledge, helping others, and inspiring learning. Excited to explore, learn, and create together with the community every step of the way!</p> 
+      <p>Passionate about AI and Machine Learning, I aim to apply what I learn to create meaningful solutions.</p>
+      <p>My goal is not just personal growth, but also sharing knowledge, helping others, and inspiring learning. 
+        Excited to explore, learn, and create together with the community every step of the way!</p> 
   </div>
 
   <!-- RIGHT SIDE: About Me -->
