Update chat header text to include '(Ask)'

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
   <!-- Chat Popup -->
   <div id="chat-popup" class="chat-popup hidden">
     <div class="chat-header" onclick="toggleChat()">
-      Your Friend  <span id="toggle-symbol">▼</span>
+      Your Friend(Ask)  <span id="toggle-symbol">▼</span>
     </div>
     <div class="chat-body" id="chat-body"></div>
     <div class="chat-input">
