--- a/index.html
+++ b/index.html
@@ -42,9 +42,13 @@
 <header>
   <h1>Kirti Kaushal</h1>
   <div class="social-icons">
-    <a href="https://github.com/kirti" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://www.linkedin.com/in/kirti3/" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://medium.com/@kirtikau" target="_blank"><i class="fab fa-medium"></i></a>
+    <a href="https://github.com/kirti" target="_blank" aria-label="View my GitHub Profile"><i class="fab fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/kirti3/" target="_blank" aria-label="View my LinkedIn Profile"><i class="fab fa-linkedin"></i></a>
+    <a href="https://medium.com/@kirtikau" target="_blank" aria-label="View my Medium Articles"><i class="fab fa-medium"></i></a>
+    <a href="https://g.dev/kirtikau" target="_blank" aria-label="View my Google Developer Profile"><i class="fab fa-google"></i></a>
+    <a href="https://olympus.mygreatlearning.com/eportfolio" target="_blank" aria-label="View my ePortfolio">
+    <i class="fas fa-graduation-cap"></i></a>
+
   </div>
 </header>
 
@@ -117,9 +121,32 @@
             onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(0, 122, 204, 0.3)';">
                 <i class="fab fa-windows"></i> VS Marketplace Extension
             </a>
+
+            <a href="https://huggingface.co/spaces/kirti3/superkart-frontend" target="_blank" style="
+              display: inline-flex;
+              align-items: center;
+              gap: 8px;
+              padding: 12px 20px;
+              background: linear-gradient(135deg, #ff4081, #f50057);
+              color: white;
+              text-decoration: none;
+              border-radius: 6px;
+              font-weight: 600;
+              transition: 0.3s ease;
+              box-shadow: 0 4px 12px rgba(255, 64, 129, 0.3);
+            " 
+            onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 16px rgba(255, 64, 129, 0.5)';"
+            onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(255, 64, 129, 0.3)';">
+              <i class="fas fa-robot"></i> AI Model Deployment Showcase
+            </a>
         </div>
     </div>
-   
+  <div style="margin-top: 30px; padding-top: 30px; border-top: 1px solid #333;">
+    <p style="margin-bottom: 20px; color: #ddd;">
+      <strong style="color: #00b0ff;">Chatbot Integration:</strong>
+    </p>
+    <p>This chatbot in this website my first AI model integrated with OpenAI and deployed on Render.com, providing real-time assistance and information.</p>
+  </div>
 
   </div>
 
